# ra-painkg

./: .gitignore  LICENSE  README.md  manuscript.md  pyproject.toml  requirements.txt
benchmark/: FINAL_REVIEW.md  JBI_comprehensive_review.md  __init__.py  add_ai_statement.py  add_s6.py  add_significance.py  check_csvs.py  cover_letter.md  critical_checks.py  edit_tier1.py  edit_tier1b.py  edit_tier1c.py  edit_tier2.py  edit_tier2b.py  edit_tier2c.py  edit_tier3.py  edit_tier3b.py  evaluation.py  extract_claims.py  final_comprehensive_verify.py  final_scan.py  find_intel.py  find_s42.py  fix_batch1.py  fix_batch2.py  fix_batch3.py  fix_body_errors.py  fix_final.py  fix_final_cleanup.py  fix_final_errors.py  fix_intel.py  fix_jbi_limits.py  fix_last_3.py  fix_r4.py  fix_r5.py  fix_r6.py  fix_ref4.py  fix_remaining.py  fix_string.py  fix_string2.py  (+21 more)
benchmark/data/: string_adj.npz  string_edges_norman.csv
benchmark/results/: benchmark_alpha.csv  benchmark_alpha_sensitivity.csv  benchmark_jbi.csv  benchmark_jbi_extended.csv  benchmark_k.csv  benchmark_k_sensitivity.csv  (+28 more)
notebooks/: 01_quick_exploration.ipynb
output/: RA_PainKG_summary.json  graph_statistics.json  pain_signaling_pathways.md
submission/: SUBMISSION_CHECKLIST.md  competing_interests_declaration.docx  competing_interests_declaration.md  cover_letter.docx  data_availability_statement.docx  gen_graphical_abstract.py  graphical_abstract.docx  graphical_abstract_mermaid.md  manuscript.docx  significance_statement.docx  significance_statement.md  supplementary_tables.docx  supplementary_tables.md
(+11 files in other folders)
